// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show warning with unknown option (stderr) 1`] = `
"Ignored unknown option: hello
"
`;

exports[`show warning with unknown option (stdout) 1`] = `""`;

exports[`show warning with unknown option (write) 1`] = `Array []`;

exports[`throw error with invalid config format (stderr) 1`] = `
"Error: Invalid configuration file.
Failed to parse \\"<cwd>/tests_integration/cli/config/invalid/file/.prettierrc\\" as JSON, JS, or YAML.
"
`;

exports[`throw error with invalid config format (stdout) 1`] = `""`;

exports[`throw error with invalid config format (write) 1`] = `Array []`;

exports[`throw error with invalid config option (int) (stderr) 1`] = `
"Invalid tabWidth value.
Expected an integer, but received: 0.5"
`;

exports[`throw error with invalid config option (int) (stdout) 1`] = `""`;

exports[`throw error with invalid config option (int) (write) 1`] = `Array []`;

exports[`throw error with invalid config option (trailingComma) (stderr) 1`] = `
"Invalid option for trailingComma.
Expected \\"none\\", \\"es5\\" or \\"all\\", but received: \\"wow\\""
`;

exports[`throw error with invalid config option (trailingComma) (stdout) 1`] = `""`;

exports[`throw error with invalid config option (trailingComma) (write) 1`] = `Array []`;

exports[`throw error with invalid config precedence option (configPrecedence) (stderr) 1`] = `
"Invalid option for --config-precedence.
Expected \\"cli-override\\", \\"file-override\\" or \\"prefer-file\\", but received: \\"option/configPrecedence\\""
`;

exports[`throw error with invalid config precedence option (configPrecedence) (stdout) 1`] = `""`;

exports[`throw error with invalid config precedence option (configPrecedence) (write) 1`] = `Array []`;

exports[`throw error with invalid config target (directory) (stderr) 1`] = `
"Error: Invalid configuration file.
EISDIR: illegal operation on a directory, read
"
`;

exports[`throw error with invalid config target (directory) (stdout) 1`] = `""`;

exports[`throw error with invalid config target (directory) (write) 1`] = `Array []`;
